fix spacing slider

--- a/frontend/src/css/_main.scss
+++ b/frontend/src/css/_main.scss
@@ -72,9 +72,9 @@ div,
   }
 }
 .slider-padding {
-  padding: 1.2rem;
+  padding: 1.2rem 1rem;
   @media (min-width: 900px) {
-    padding: 2rem;
+    padding: 1.8rem 1.6rem;
   }
 }
 .bg-glass-blue {
